--- a/Smooth_Disk_Circ_Orb_Model.ipynb
+++ b/Smooth_Disk_Circ_Orb_Model.ipynb
@@ -406,7 +406,7 @@
     "    rho0       [float] -> Disk density at stellar surface (gcm^-3)\n",
     "    i_disk     [float] -> Inclination of disk plane (rad)\n",
     "    phi        [float] -> True anomaly (rad)\n",
-    "    omega      [float] -> Argument of periastron (rad)\n",
+    "    omega      [float] -> Orbit phase angle (rad)\n",
     "    mu_e       [float] -> Mean molecular weight per free electron\n",
     "    \n",
     "    --------------------------------------------------------------------------------\n",
@@ -455,7 +455,7 @@
     "    rho0       [float] -> Disk density at stellar surface (gcm^-3)\n",
     "    i_disk     [float] -> Inclination of disk plane (rad)\n",
     "    phi        [float] -> True anomaly (rad)\n",
-    "    omega      [float] -> Argument of periastron (rad)\n",
+    "    omega      [float] -> Orbit phase angle (rad)\n",
     "    mu_e       [float] -> Mean molecular weight per free electron\n",
     "    \n",
     "    --------------------------------------------------------------------------------\n",
@@ -512,7 +512,7 @@
     "    rho0       [float] -> Disk density at stellar surface (gcm^-3)\n",
     "    i_disk     [float] -> Inclination of disk plane (rad)\n",
     "    phi        [float] -> True anomaly (rad)\n",
-    "    omega      [float] -> Argument of periastron (rad)\n",
+    "    omega      [float] -> Orbit phase angle (rad)\n",
     "    nu         [float] -> Signal frequency (GHz)\n",
     "    mu_e       [float] -> Mean molecular weight per free electron\n",
     "    \n",
@@ -615,7 +615,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20870b91970>"
+       "<matplotlib.legend.Legend at 0x267f631bb80>"
       ]
      },
      "execution_count": 11,
@@ -722,7 +722,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e90c2c2f929343ffb1dc4397ddff96de",
+       "model_id": "6445bbe6472647aabb5ff1e678dc8c0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -795,14 +795,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_23648\\1711043343.py:34: RuntimeWarning: invalid value encountered in power\n",
+      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_32284\\1711043343.py:34: RuntimeWarning: invalid value encountered in power\n",
       "  v_r_s = v_0 + (v_inf-v_0)*(1-R_star/np.sqrt(r_s_sqrd))**beta                                                         #Calculates the velocity of the wind\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20801aac9d0>"
+       "<matplotlib.legend.Legend at 0x26786d2f550>"
       ]
      },
      "execution_count": 14,
@@ -850,7 +850,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_23648\\1711043343.py:34: RuntimeWarning: invalid value encountered in sqrt\n",
+      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_32284\\1711043343.py:34: RuntimeWarning: invalid value encountered in sqrt\n",
       "  v_r_s = v_0 + (v_inf-v_0)*(1-R_star/np.sqrt(r_s_sqrd))**beta                                                         #Calculates the velocity of the wind\n"
      ]
     },
@@ -935,7 +935,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x208004621f0>"
+       "<matplotlib.legend.Legend at 0x26780744040>"
       ]
      },
      "execution_count": 18,
@@ -995,7 +995,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20800919dc0>"
+       "<matplotlib.legend.Legend at 0x2678090e310>"
       ]
      },
      "execution_count": 20,
@@ -1057,7 +1057,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2080082cc40>"
+       "<matplotlib.legend.Legend at 0x26780810460>"
       ]
      },
      "execution_count": 22,
@@ -1105,7 +1105,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x208008b3d60>"
+       "<matplotlib.legend.Legend at 0x26780895a60>"
       ]
      },
      "execution_count": 23,
@@ -1220,7 +1220,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20805ca76d0>"
+       "<matplotlib.legend.Legend at 0x26786ccbe80>"
       ]
      },
      "execution_count": 25,
@@ -1338,7 +1338,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20805be79a0>"
+       "<matplotlib.legend.Legend at 0x26793715eb0>"
       ]
      },
      "execution_count": 27,
@@ -1392,8 +1392,8 @@
    "outputs": [],
    "source": [
     "#Calculating the optical depth\n",
-    "phi = np.linspace(0, 2*np.pi, 512, endpoint=False)                                                   #Orbital phase array in rad (redundancy removed)\n",
-    "nu = [1.5, 1.75, 2]                                                                                  #Signal frequency in GHz\n",
+    "phi = np.linspace(0, 2*np.pi, 512, endpoint=False)                                         #Orbital phase array in rad (redundancy removed)\n",
+    "nu = [1.5, 1.75, 2]                                                                        #Signal frequency in GHz\n",
     "disk_tau1 = disk_ffa(a_Rsun=10, T=7e3, M_star_sol=20, R_star_sol=9, beta=3,\n",
     "                  rho0=1e-16, i_disk=i_disk_rad[0], phi=phi, omega=om, nu=nu[0])                     #Optical depth\n",
     "disk_tau2 = disk_ffa(a_Rsun=10, T=7e3, M_star_sol=20, R_star_sol=9, beta=3,\n",
@@ -1411,7 +1411,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x208017d8d00>"
+       "<matplotlib.legend.Legend at 0x26786de7bb0>"
       ]
      },
      "execution_count": 29,
@@ -1458,7 +1458,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x208735822e0>"
+       "<matplotlib.legend.Legend at 0x267f8587ee0>"
       ]
      },
      "execution_count": 30,
