--- a/Smooth_Wind_Disc_Ellip_Orb_Model.ipynb
+++ b/Smooth_Wind_Disc_Ellip_Orb_Model.ipynb
@@ -1934,7 +1934,7 @@
     "plt.plot(phi, disc_DM1, label='i disc = ' + str(int(i_disc_deg[0])) + ' deg')\n",
     "plt.plot(phi, disc_DM2, label='i disc = ' + str(int(i_disc_deg[1])) + ' deg')\n",
     "plt.plot(phi, disc_DM3, label='i disc = ' + str(int(i_disc_deg[2])) + ' deg')\n",
-    "plt.title('Disc Dispersion Measure Vs True Anomaly')\n",
+    "plt.title('Disc Dispersion Measure Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (rad)')\n",
     "plt.ylabel('Dispersion Measure (pc cm^-3)')\n",
     "plt.legend()"
@@ -1989,7 +1989,7 @@
     "plt.plot(phi, disc_DM1, label='i disc = ' + str(int(i_disc_deg[0])) + ' deg')\n",
     "plt.plot(phi, disc_DM2, label='i disc = ' + str(int(i_disc_deg[1])) + ' deg')\n",
     "plt.plot(phi, disc_DM3, label='i disc = ' + str(int(i_disc_deg[2])) + ' deg')\n",
-    "plt.title('Disc Dispersion Measure Vs True Anomaly')\n",
+    "plt.title('Disc Dispersion Measure Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (rad)')\n",
     "plt.ylabel('Dispersion Measure (pc cm^-3)')\n",
     "plt.yscale('log')\n",
@@ -2051,7 +2051,7 @@
     "    disc_DM_gif = disc_DM(a_Rsun=1345, T=1.2e4, M_star_sol=20, R_star_sol=9,   \n",
     "                       beta=4, rho0=-12, i_disc=disc_i, phi=phi, omega=om, Omega=Om, e=0.87, i=i_rad)\n",
     "    line.set_data(phi, disc_DM_gif)\n",
-    "    title.set_text('Disc Dispersion Measure Vs True Anomaly \\ndisc i = ' + str(int(disc_i_gif_deg[frame])) + ' (deg)')\n",
+    "    title.set_text('Disc Dispersion Measure Vs Orbital Phase \\ndisc i = ' + str(int(disc_i_gif_deg[frame])) + ' (deg)')\n",
     "    return line, title\n",
     "\n",
     "#Animating\n",
@@ -2109,7 +2109,7 @@
     "    disc_DM_gif = disc_DM(a_Rsun=1345, T=1.2e4, M_star_sol=20, R_star_sol=9,   \n",
     "                       beta=4, rho0=-12, i_disc=disc_i_gif, phi=phi, omega=om, Omega=Om, e=0.87, i=orb_i_gif)\n",
     "    line.set_data(phi, disc_DM_gif)\n",
-    "    title.set_text('Disc Dispersion Measure Vs True Anomaly \\norbital i = ' + str(int(orb_i_deg[frame])) + ' (deg)')\n",
+    "    title.set_text('Disc Dispersion Measure Vs Orbital Phase \\norbital i = ' + str(int(orb_i_deg[frame])) + ' (deg)')\n",
     "    return line, title\n",
     "\n",
     "#Animating\n",
@@ -2167,7 +2167,7 @@
     "    disc_DM_gif = disc_DM(a_Rsun=1345, T=1.2e4, M_star_sol=20, R_star_sol=9,   \n",
     "                       beta=4, rho0=-12, i_disc=disc_i_gif, phi=phi, omega=om, Omega=Om, e=0.87, i=i_rad)\n",
     "    line.set_data(phi, disc_DM_gif)\n",
-    "    title.set_text('Disc Dispersion Measure Vs True Anomaly \\nomega = ' + str(int(om_gif_deg[frame])) + ' (deg)')\n",
+    "    title.set_text('Disc Dispersion Measure Vs Orbital Phase \\nomega = ' + str(int(om_gif_deg[frame])) + ' (deg)')\n",
     "    return line, title\n",
     "\n",
     "#Animating\n",
@@ -2236,7 +2236,7 @@
     "plt.plot(phi, disc_tau1, label = 'i disc = ' + str(i_disc_deg[0]) + ' (deg), freq = ' + str(nu[0]) + ' (GHz)')\n",
     "plt.plot(phi, disc_tau2, label = 'i disc = ' + str(i_disc_deg[1]) + ' (deg), freq = ' + str(nu[1]) + ' (GHz)')\n",
     "plt.plot(phi, disc_tau3, label = 'i disc = ' + str(i_disc_deg[2]) + ' (deg), freq = ' + str(nu[2]) + ' (GHz)')\n",
-    "plt.title('FFA Optical Depth Vs True Anomaly')\n",
+    "plt.title('FFA Optical Depth Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (Rad)')\n",
     "plt.ylabel('Optical Depth')\n",
     "plt.legend()"
@@ -2274,7 +2274,7 @@
     "plt.plot(phi, disc_tau1, label = 'i disc = ' + str(i_disc_deg[0]) + ' (deg), freq = ' + str(nu[0]) + ' (GHz)')\n",
     "plt.plot(phi, disc_tau2, label = 'i disc = ' + str(i_disc_deg[1]) + ' (deg), freq = ' + str(nu[1]) + ' (GHz)')\n",
     "plt.plot(phi, disc_tau3, label = 'i disc = ' + str(i_disc_deg[2]) + ' (deg), freq = ' + str(nu[2]) + ' (GHz)')\n",
-    "plt.title('FFA Optical Depth Vs True Anomaly')\n",
+    "plt.title('FFA Optical Depth Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (Rad)')\n",
     "plt.ylabel('Optical Depth')\n",
     "plt.yscale('log')\n",
@@ -2322,7 +2322,7 @@
     "plt.plot(phi, np.exp(-disc_tau1), label = 'i disc = ' + str(i_disc_deg[0]) + ' (deg), freq = ' + str(nu[0]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-disc_tau2), label = 'i disc = ' + str(i_disc_deg[1]) + ' (deg), freq = ' + str(nu[1]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-disc_tau3), label = 'i disc = ' + str(i_disc_deg[2]) + ' (deg), freq = ' + str(nu[2]) + ' (GHz)')\n",
-    "plt.title('Disc Transmission Factor e^(-tau) Vs True Anomaly')\n",
+    "plt.title('Disc Transmission Factor e^(-tau) Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (Rad)')\n",
     "plt.ylabel('e^(-tau)')\n",
     "plt.ylim(0.7, None)\n",
@@ -2361,7 +2361,7 @@
     "plt.plot(phi, np.exp(-disc_tau1), label = 'i disc = ' + str(i_disc_deg[0]) + ' (deg), freq = ' + str(nu[0]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-disc_tau2), label = 'i disc = ' + str(i_disc_deg[1]) + ' (deg), freq = ' + str(nu[1]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-disc_tau3), label = 'i disc = ' + str(i_disc_deg[2]) + ' (deg), freq = ' + str(nu[2]) + ' (GHz)')\n",
-    "plt.title('Disc Transmission Factor e^(-tau) Vs True Anomaly')\n",
+    "plt.title('Disc Transmission Factor e^(-tau) Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (Rad)')\n",
     "plt.ylabel('e^(-tau)')\n",
     "plt.yscale('log')\n",
@@ -2661,7 +2661,7 @@
     "plt.plot(phi, tot_DM1, label='i disc = ' + str(int(i_disc_deg[0])) + ' (deg)')\n",
     "plt.plot(phi, tot_DM2, label='i disc = ' + str(int(i_disc_deg[1])) + ' (deg)')\n",
     "plt.plot(phi, tot_DM3, label='i disc = ' + str(int(i_disc_deg[2])) + ' (deg)')\n",
-    "plt.title('Total Dispersion Measure Vs True Anomaly')\n",
+    "plt.title('Total Dispersion Measure Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (rad)')\n",
     "plt.ylabel('Dispersion Measure (pc cm^-3)')\n",
     "plt.legend()"
@@ -2699,7 +2699,7 @@
     "plt.plot(phi, tot_DM1, label='i disc = ' + str(int(i_disc_deg[0])) + ' (deg)')\n",
     "plt.plot(phi, tot_DM2, label='i disc = ' + str(int(i_disc_deg[1])) + ' (deg)')\n",
     "plt.plot(phi, tot_DM3, label='i disc = ' + str(int(i_disc_deg[2])) + ' (deg)')\n",
-    "plt.title('Total Dispersion Measure Vs True Anomaly')\n",
+    "plt.title('Total Dispersion Measure Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (rad)')\n",
     "plt.ylabel('Dispersion Measure (pc cm^-3)')\n",
     "plt.yscale('log')\n",
@@ -2760,7 +2760,7 @@
     "    tot_DM_disc_i = tot_DM(phi=phi, i=i_rad, a_Rsun=1345, R_star_sol=9, M_star_sol=20, Mdot_Msun_per_yr=-9, v_0_kms=5, v_inf_kms=1e3,\n",
     "                          e=0.87, omega=om, Omega=Om, beta=2, T_disc=1.2e4, beta_disc=4, rho0=-12, i_disc=disc_i)\n",
     "    line.set_data(phi, tot_DM_disc_i)\n",
-    "    title.set_text('Total Dispersion Measure Vs True Anomaly \\ndisc i = ' + str(int(disc_i_gif_deg[frame])) + ' (deg)')\n",
+    "    title.set_text('Total Dispersion Measure Vs Orbital Phase \\ndisc i = ' + str(int(disc_i_gif_deg[frame])) + ' (deg)')\n",
     "    return line, title\n",
     "\n",
     "#Animating\n",
@@ -2817,7 +2817,7 @@
     "    tot_DM_orb_i = tot_DM(phi=phi, i=orb_i_gif, a_Rsun=1345, R_star_sol=9, M_star_sol=20, Mdot_Msun_per_yr=-9, v_0_kms=5, v_inf_kms=1e3,\n",
     "                          e=0.87, omega=om, Omega=Om, beta=2, T_disc=1.2e4, beta_disc=4, rho0=-12, i_disc=disc_i_gif)\n",
     "    line.set_data(phi, tot_DM_orb_i)\n",
-    "    title.set_text('Total Dispersion Measure Vs True Anomaly \\norbital i = ' + str(int(orb_i_deg[frame])) + ' (deg)')\n",
+    "    title.set_text('Total Dispersion Measure Vs Orbital Phase \\norbital i = ' + str(int(orb_i_deg[frame])) + ' (deg)')\n",
     "    return line, title\n",
     "\n",
     "#Animating\n",
@@ -2874,7 +2874,7 @@
     "    tot_DM_om = tot_DM(phi=phi, i=i_rad, a_Rsun=1345, R_star_sol=9, M_star_sol=20, Mdot_Msun_per_yr=-9, v_0_kms=5, v_inf_kms=1e3,\n",
     "                          e=0.87, omega=om, Omega=Om, beta=2, T_disc=1.2e4, beta_disc=4, rho0=-12, i_disc=disc_i_gif)\n",
     "    line.set_data(phi, tot_DM_om)\n",
-    "    title.set_text('Total Dispersion Measure Vs True Anomaly \\nomega = ' + str(int(om_gif_deg[frame])) + ' (deg)')\n",
+    "    title.set_text('Total Dispersion Measure Vs Orbital Phase \\nomega = ' + str(int(om_gif_deg[frame])) + ' (deg)')\n",
     "    return line, title\n",
     "\n",
     "#Animating\n",
@@ -2935,7 +2935,7 @@
     "plt.plot(phi, tot_tau1, label='i disc = ' + str(int(i_disc_deg[0])) + ' (deg), freq = ' + str(int(nu[0])) + ' (GHz)')\n",
     "plt.plot(phi, tot_tau2, label='i disc = ' + str(int(i_disc_deg[1])) + ' (deg), freq = ' + str(int(nu[1])) + ' (GHz)')\n",
     "plt.plot(phi, tot_tau3, label='i disc = ' + str(int(i_disc_deg[2])) + ' (deg), freq = ' + str(int(nu[2])) + ' (GHz)')\n",
-    "plt.title('FFA Optical Depth Vs True Anomaly')\n",
+    "plt.title('FFA Optical Depth Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (rad)')\n",
     "plt.ylabel('Optical Depth')\n",
     "plt.legend()"
@@ -2973,7 +2973,7 @@
     "plt.plot(phi, tot_tau1, label='i disc = ' + str(int(i_disc_deg[0])) + ' (deg), freq = ' + str(int(nu[0])) + ' (GHz)')\n",
     "plt.plot(phi, tot_tau2, label='i disc = ' + str(int(i_disc_deg[1])) + ' (deg), freq = ' + str(int(nu[1])) + ' (GHz)')\n",
     "plt.plot(phi, tot_tau3, label='i disc = ' + str(int(i_disc_deg[2])) + ' (deg), freq = ' + str(int(nu[2])) + ' (GHz)')\n",
-    "plt.title('FFA Optical Depth Vs True Anomaly')\n",
+    "plt.title('FFA Optical Depth Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (rad)')\n",
     "plt.ylabel('Optical Depth')\n",
     "plt.yscale('log')\n",
@@ -3020,7 +3020,7 @@
     "plt.plot(phi, np.exp(-tot_tau1), label = 'i disc = ' + str(i_disc_deg[0]) + ' (deg), freq = ' + str(nu[0]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-tot_tau2), label = 'i disc = ' + str(i_disc_deg[1]) + ' (deg), freq = ' + str(nu[1]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-tot_tau3), label = 'i disc = ' + str(i_disc_deg[2]) + ' (deg), freq = ' + str(nu[2]) + ' (GHz)')\n",
-    "plt.title('Total Transmission Factor e^(-tau) Vs True Anomaly')\n",
+    "plt.title('Total Transmission Factor e^(-tau) Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (Rad)')\n",
     "plt.ylabel('e^(-tau)')\n",
     "plt.legend()"
@@ -3058,7 +3058,7 @@
     "plt.plot(phi, np.exp(-tot_tau1), label = 'i disc = ' + str(i_disc_deg[0]) + ' (deg), freq = ' + str(nu[0]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-tot_tau2), label = 'i disc = ' + str(i_disc_deg[1]) + ' (deg), freq = ' + str(nu[1]) + ' (GHz)')\n",
     "plt.plot(phi, np.exp(-tot_tau3), label = 'i disc = ' + str(i_disc_deg[2]) + ' (deg), freq = ' + str(nu[2]) + ' (GHz)')\n",
-    "plt.title('Total Transmission Factor e^(-tau) Vs True Anomaly')\n",
+    "plt.title('Total Transmission Factor e^(-tau) Vs Orbital Phase')\n",
     "plt.xlabel('Orbital Phase (Rad)')\n",
     "plt.ylabel('e^(-tau)')\n",
     "plt.ylim(8e-1, None)\n",
