--- a/Combined_Full_Model_2024_Clump_Analysis.ipynb
+++ b/Combined_Full_Model_2024_Clump_Analysis.ipynb
@@ -1449,7 +1449,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2939b6af190>"
+       "<matplotlib.legend.Legend at 0x1e988478c40>"
       ]
      },
      "execution_count": 22,
@@ -1488,7 +1488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2939da31880>"
+       "<matplotlib.legend.Legend at 0x1e98a5fcd60>"
       ]
      },
      "execution_count": 23,
@@ -1526,7 +1526,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2939d78cdf0>"
+       "<matplotlib.legend.Legend at 0x1e98a8aaa30>"
       ]
      },
      "execution_count": 24,
@@ -1605,7 +1605,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2939dae0490>"
+       "<matplotlib.legend.Legend at 0x1e98a94b8e0>"
       ]
      },
      "execution_count": 26,
@@ -1764,6 +1764,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "64fdf413-676c-4037-8055-945bec4c0bde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number Density of Abnormal Points\n",
+      "---------------------------------\n",
+      "Pre-periastron Wind Points:\n",
+      "2515914.974198958e^6 cm^-3\n",
+      "2514711.762829183 cm^-3\n",
+      "2516430.6362145757 cm^-3\n",
+      "2515227.424844801 cm^-3\n",
+      "2515914.974198958 cm^-3\n",
+      "---------------------------------\n",
+      "Pre-periastron Disc Points:\n",
+      "2547886.0191672575 cm^-3\n",
+      "2561293.2315733186 cm^-3\n",
+      "2552183.2026307387 cm^-3\n",
+      "2576247.430026233 cm^-3\n",
+      "---------------------------------\n",
+      "Post-periastron Disc Points:\n",
+      "2482053.168506726 cm^-3\n",
+      "2520727.8196780565 cm^-3\n",
+      "---------------------------------\n",
+      "Post-periastron Wind Points:\n",
+      "2521243.4816936743 cm^-3\n",
+      "2519868.3829853605 cm^-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calculating the (rough) number desnity of the abnormal points\n",
+    "\n",
+    "print(\"Number Density of Abnormal Points\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Pre-periastron Wind Points:\")\n",
+    "print(str(DM2024[3]*(pc_to_cm/(12*AU_cgs))) + \"e^6 cm^-3\")\n",
+    "print(str(DM2024[5]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[8]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[9]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[10]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Pre-periastron Disc Points:\")\n",
+    "print(str(DM2024[13]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[14]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[15]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[18]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Post-periastron Disc Points:\")\n",
+    "print(str(DM2024[28]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[30]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Post-periastron Wind Points:\")\n",
+    "print(str(DM2024[42]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
+    "print(str(DM2024[54]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "072fd599-e705-4793-96ed-e5b597f56830",
    "metadata": {},
@@ -1773,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2ca1b322-b7f4-468f-81c8-fbcfe37df835",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "6bbcb16b-f23d-4460-b7e9-abd39240a82b",
    "metadata": {},
    "outputs": [
