--- a/Combined_Full_Model_2024_Clump_Analysis.ipynb
+++ b/Combined_Full_Model_2024_Clump_Analysis.ipynb
@@ -1449,7 +1449,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e988478c40>"
+       "<matplotlib.legend.Legend at 0x1dd110ee280>"
       ]
      },
      "execution_count": 22,
@@ -1488,7 +1488,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e98a5fcd60>"
+       "<matplotlib.legend.Legend at 0x1dd132529a0>"
       ]
      },
      "execution_count": 23,
@@ -1526,7 +1526,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e98a8aaa30>"
+       "<matplotlib.legend.Legend at 0x1dd132ce610>"
       ]
      },
      "execution_count": 24,
@@ -1605,7 +1605,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e98a94b8e0>"
+       "<matplotlib.legend.Legend at 0x1dd1359d790>"
       ]
      },
      "execution_count": 26,
@@ -1776,7 +1776,7 @@
       "Number Density of Abnormal Points\n",
       "---------------------------------\n",
       "Pre-periastron Wind Points:\n",
-      "2515914.974198958e^6 cm^-3\n",
+      "2515914.974198958 cm^-3\n",
       "2514711.762829183 cm^-3\n",
       "2516430.6362145757 cm^-3\n",
       "2515227.424844801 cm^-3\n",
@@ -1804,7 +1804,7 @@
     "print(\"Number Density of Abnormal Points\")\n",
     "print(\"---------------------------------\")\n",
     "print(\"Pre-periastron Wind Points:\")\n",
-    "print(str(DM2024[3]*(pc_to_cm/(12*AU_cgs))) + \"e^6 cm^-3\")\n",
+    "print(str(DM2024[3]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
     "print(str(DM2024[5]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
     "print(str(DM2024[8]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
     "print(str(DM2024[9]*(pc_to_cm/(12*AU_cgs))) + \" cm^-3\")\n",
@@ -1915,14 +1915,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e918d697-048f-4ce2-9516-e9765297c6b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0ae535e-f600-452d-9443-804d8e4a4c67",
    "metadata": {},
    "outputs": [],
    "source": []
